# ygm-project-template

./: CMakeLists.txt  README.md
data/json_files/: sample1.ndjson  sample2.ndjson
src/: CMakeLists.txt  read_json_example.cpp
